# tospotify

./: .gitignore  .pylintrc  CONTRIBUTING.md  MANIFEST.in  Makefile  Pipfile  README.md  pytest.ini  requirements-dev.txt  requirements.txt  run.py  setup.cfg  setup.py
.github/workflows/: build.yml  publish.yml
test/: conftest.py  test_generator.py  test_integration.py  test_parser.py  test_processing.py  test_queries.py  test_run.py  test_search.py
test/data/: cp1252_playlist.m3u  path_playlist.m3u  valid_playlist.m3u  valid_utf8.m3u8
test/types/: test_artists.py  test_queries.py  test_titles.py
tospotify/: __init__.py  generator.py  parser.py  processing.py  queries.py  run.py  search.py
tospotify/types/: artists.py  queries.py  titles.py
