[metadata]
description-file = README.md


[pylint]
max-line-length = 120
max-args = 7
logging-modules = logging
disable = 
    logging-too-many-args,
    missing-module-docstring,
    too-few-public-methods,
    logging-format-interpolation,
    logging-fstring-interpolation


[flake8]
exclude =
    .git,
    __pycache__,
    .pytest_cache
ignore = 
max-line-length = 120


[bandit]
targets: tospotify
